        * manual-tests/chromium/media-player-not-available.html: Added.
        Manual test, following instruction in this test for procedures.
        * page/DOMWindow.idl:
        Mark HTMLMediaElement, HTMLAudioElement, HTMLVideElement, MediaError
        as enabled at runtime.

2009-10-19  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Adam Roben.

        Make the local static panScrollIcon into a Image* instead
        of a RefPtr<Image>.

        * platform/ScrollView.cpp:
        (WebCore::ScrollView::wheelEvent):

2009-10-19  Andrew Scherkus  <scherkus@chromium.org>

        Reviewed by David Levin.

        Forcefully set antialiasing for Chromium media controls.

        https://bugs.webkit.org/show_bug.cgi?id=30521

        Before it was nondeterministiacally being enabled based on the previous state of GraphicsContext.

        Covered by existing layout tests.

        * rendering/RenderMediaControlsChromium.cpp:
        (WebCore::paintMediaSlider): Added setShouldAntialias(true).

2009-10-19  Jens Alfke  <jens@mooseyard.com>

        Reviewed by Darin Adler.

        Optimize string upper/lowercasing
        https://bugs.webkit.org/show_bug.cgi?id=30261
        
        - Added AtomicString::upper() and lower()
        - Further optimized StringImpl::lower()
        - Removed StringImpl::isLower()
        - Added QualifiedName::localNameUpper(), which is cached, thereby saving
          thousands of upper() calls and string allocations.
 
         * dom/Element.cpp:
         (WebCore::Element::setAttribute): Call AtomicString::lower()
         * dom/QualifiedName.cpp:
         (WebCore::QualifiedName::localNameUpper): New method
         * dom/QualifiedName.h: Added localNameUpper() method
         * dom/StyledElement.cpp:
         (WebCore::StyledElement::parseMappedAttribute):  Call AtomicString::lower()
         * html/HTMLDocument.cpp:
         (WebCore::HTMLDocument::createElement): Call AtomicString::lower()